data/derived/fa15/progs/unify/prog3889.ml.out
Characters 19-32:
  let _ = palindrome "myxomatosis";;
                     ^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
